# master-of-coin-ai

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  DOCUMENTATION.md  LICENSE  PRODUCT_OVERVIEW.md  README.md  RUN THE APP.txt  pyproject.toml
.github/workflows/: ci.yml
config/: thresholds.yaml
examples/: income_statement_template.xlsx
packaging/: build.py  master_of_coin.spec
scripts/: check.py
src/advisor/: __init__.py  _resources.py  app.py  config.py  schema.py
src/advisor/api/: __init__.py  app.py  deps.py  errors.py  models.py  routes.py  sessions.py
src/advisor/engine/: __init__.py  anomaly.py  facts.py  kpis.py  rounding.py  scenario.py  status.py  variance.py
src/advisor/ingestion/: __init__.py  errors.py  extractor.py  labels.py  numbers.py  periods.py  scale.py  workbook.py
src/advisor/narrative/: __init__.py  advisor.py  chat.py  client.py  context.py  errors.py  factory.py  providers.py  templates.py
src/advisor/reports/: __init__.py  dashboard.py  excel.py  formatting.py  pack.py  pdf.py  template.py  word.py
tests/: _reportdata.py
tests/e2e/: test_desktop_smoke.py  test_packaged_binary.py
tests/integration/: test_ingestion_xlsx.py  test_scenario_pipeline.py
tests/integration/api/: conftest.py  test_api.py
tests/integration/narrative/: test_advisor_trust_pipeline.py
tests/integration/reports/: conftest.py  test_generators.py
tests/unit/: conftest.py  test_architecture.py  test_config.py  test_engine_anomaly.py  test_engine_facts.py  test_engine_kpis.py  test_engine_purity.py  test_engine_rounding.py  test_engine_status.py  test_engine_variance.py  test_ingestion_errors.py  test_ingestion_extractor.py  test_ingestion_labels.py  test_ingestion_numbers.py  test_ingestion_periods.py  test_ingestion_scale.py  test_scenario_apply.py  test_scenario_compare.py  test_scenario_errors.py  test_scenario_models.py  test_schema.py  test_thresholds.py
tests/unit/narrative/: conftest.py  test_advisor.py  test_context.py  test_factory.py  test_gemini_client.py  test_no_raw_imports.py  test_stubs.py  test_templates.py
tests/unit/reports/: conftest.py  test_dashboard.py  test_formatting.py  test_template.py
web/: app.js  index.html  styles.css
